--- a/app/Containerfile
+++ b/app/Containerfile
@@ -1,3 +1,6 @@
 FROM docker.io/library/nextcloud:production-fpm
 
-RUN apt-get update && apt-get install -y procps smbclient && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y procps smbclient libsmbclient-dev && rm -rf /var/lib/apt/lists/*
+RUN pecl install smbclient
+
+RUN echo 'extension=smbclient.so' > /usr/local/etc/php/conf.d/php-smbclient.ini
